tests/diag/destructure-fail.err
tests/diag/destructure-fail.id:2:12: error: main actor exited with reason {:error {:no-clause :{a b} {{1 2 3}}}}
  in main (tests/diag/destructure-fail.id:2)
