tests/diag/destructure-fail.id
defn mk n -> tuple 1 2 n
{a b} = mk 3
a
